--- a/public/index.html
+++ b/public/index.html
@@ -79,22 +79,22 @@
                     <h3 class="panel-title">Update Your Phone Number</h3>
                 </div>
                 <div class="panel-body">
-                    <div class="form-group">
+                /*    <div class="form-group">
                         <label for="firstName">First Name</label>
                         <input type="text" class="form-control" id="firstName" placeholder="For verification" required>
                     </div>
                     <div class="form-group">
                         <label for="lastName">Last Name</label>
                         <input type="text" class="form-control" id="lastName" placeholder="For verification" required>
-                    </div>
+                    </div>*/
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input type="email" class="form-control" id="email" placeholder="For verification" required>
                     </div>
-                    <div class="form-group">
+                   /* <div class="form-group">
                         <label for="phone">Phone</label>
                         <input type="tel" class="form-control" id="phone" placeholder="New Phone Number" required>
-                    </div>
+                    </div>*/
                 </div>
                 <div class="panel-footer">
                     <div id="message" class="alert alert-info" role="alert" style="display: none;">
