--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                 $("#message").hide();
 
                 var email = $("#email").val();
-
+console.log(email)
                     $.ajax({
                         url: event.target.action,
                         method: event.target.method,
